--- a/config.ini
+++ b/config.ini
@@ -19,24 +19,25 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🌀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*
-custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇭🇰𝐇𝐊`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
+custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🔯𝐀𝐮𝐭𝐨`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🚀𝐏𝐫𝐨𝐱𝐲
+custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🔯𝐀𝐮𝐭𝐨`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
+custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🇭🇰𝐇𝐊`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
 custom_proxy_group=📺𝐁𝐚𝐡𝐚𝐦𝐮𝐭`select`[]🇨🇳𝐓𝐖
-custom_proxy_group=🎸𝐓𝐢𝐤𝐓𝐨𝐤`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🚀𝐏𝐫𝐨𝐱𝐲`[]DIRECT
+custom_proxy_group=🎸𝐓𝐢𝐤𝐓𝐨𝐤`select`[]🔯𝐀𝐮𝐭𝐨`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
+custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]DIRECT
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🚀𝐏𝐫𝐨𝐱𝐲`[]DIRECT
-custom_proxy_group=🇭🇰𝐇𝐊`select`(香港|HK)
-custom_proxy_group=🇸🇬𝐒𝐆`select`(新加坡|狮城|SG)
-custom_proxy_group=🇨🇳𝐓𝐖`select`(台|台湾|TW)
-custom_proxy_group=🇯🇵𝐉𝐏`select`(日本|JP)
-custom_proxy_group=🇺🇸𝐔𝐒`select`(美国|US)
+custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]DIRECT
+custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,5
+custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵𝐉𝐏`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸𝐔𝐒`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
 ;custom_proxy_group=♻️自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🔯𝐀𝐮𝐭𝐨`fallback`(426|427|428|429)`http://cp.cloudflare.com/generate_204`300
+;custom_proxy_group=🔯𝐀𝐮𝐭𝐨`fallback`(426|427|428|429)`http://cp.cloudflare.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
