--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🌀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*[]🔯𝐀𝐮𝐭𝐨`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`[]🔯𝐀𝐮𝐭𝐨`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT`[].*
 custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
