--- a/config.ini
+++ b/config.ini
@@ -20,11 +20,12 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=𝟰𝘅`url-test`(4x)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,5
+custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵𝐉𝐏`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸𝐔𝐒`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇸𝐔𝐒`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
 custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*
