--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 ;设置规则标志位
-surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
-surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
-surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
+surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 surge_ruleset=🇸🇬𝐒𝐆,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 surge_ruleset=🇨🇳𝐓𝐖,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
-surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy.list
-surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy.list
+surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 surge_ruleset=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
@@ -20,13 +20,14 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`(V5|4x)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳𝐓𝐖`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇯🇵𝐉𝐏`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=🇺🇸𝐔𝐒`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭`[]DIRECT
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
 custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*
