--- a/config.ini
+++ b/config.ini
@@ -21,8 +21,7 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
-custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`(V5|4x)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳𝐓𝐖`select`(台|新北|彰化|TW|Taiwan)
@@ -36,6 +35,8 @@ custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
 ;custom_proxy_group=♻️自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
 ;custom_proxy_group=🔯𝐀𝐮𝐭𝐨`fallback`(426|427|428|429)`http://cp.cloudflare.com/generate_204`300
+;custom_proxy_group=🚀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+;custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`(V5|4x)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
